--- a/Trouble's Brewing.vbproj
+++ b/Trouble's Brewing.vbproj
@@ -189,5 +189,8 @@
   <ItemGroup>
     <None Include="Resources\DayDial.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Moon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
