--- a/Trouble's Brewing.vbproj
+++ b/Trouble's Brewing.vbproj
@@ -195,5 +195,14 @@
   <ItemGroup>
     <None Include="Resources\MoveIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RockCauldron.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GoldCauldron.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CopperCauldron.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
