--- a/Trouble's Brewing.vbproj
+++ b/Trouble's Brewing.vbproj
@@ -207,5 +207,8 @@
   <ItemGroup>
     <None Include="Resources\SellIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\NextIcon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
