--- a/Trouble's Brewing.vbproj
+++ b/Trouble's Brewing.vbproj
@@ -219,5 +219,11 @@
   <ItemGroup>
     <None Include="Resources\OrderShop.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Title.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PlayButton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
